src/deployments/dashboard/deployment.yaml
####################################
#
#     #####                                       
#    #     # ###### #####  #    # #  ####  ###### 
#    #       #      #    # #    # # #    # #      
#     #####  #####  #    # #    # # #      #####  
#          # #      #####  #    # # #      #      
#    #     # #      #   #   #  #  # #    # #      
#     #####  ###### #    #   ##   #  ####  ######
#
####################################
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  labels:
    k8s-app: kubernetes-dashboard
spec:
  selector:
    k8s-app: kubernetes-dashboard
  type: ClusterIP
  ports:
  - port: 8443
    protocol: TCP
    targetPort: 8443

###################################
#
#   ###                                           
#    #  #    #  ####  #####  ######  ####   ####  
#    #  ##   # #    # #    # #      #      #      
#    #  # #  # #      #    # #####   ####   ####  
#    #  #  # # #  ### #####  #           #      # 
#    #  #   ## #    # #   #  #      #    # #    # 
#   ### #    #  ####  #    # ######  ####   ####  
#
####################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: dashboard.kavanet.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port: 
              number: 8443
  tls:
  - hosts:
    - dashboard.kavanet.io
    secretName: dashboard.kavanet.io-tls
